--- a/charm/charmcraft.yaml
+++ b/charm/charmcraft.yaml
@@ -7,6 +7,9 @@ platforms:
   amd64:
     build-on: [amd64]
     build-for: [amd64]
+  arm64:
+    build-on: [arm64]
+    build-for: [arm64]
 
 summary: NodeJS Barebones Application
 description: |
