--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -1,13 +1,12 @@
-name: noderock
+name: barebones
 base: ubuntu@24.04                                        # as an alternative, a ubuntu base can be used
-version: '0.18'                                           # just for humans. Semantic versioning is recommended
+version: "0.18"                                           # just for humans. Semantic versioning is recommended
 summary: Barebones NodeJS rock                            # 79 char long summary
 description: |
     Barebones NodeJS rock
 
 platforms:
   amd64:
-  arm64:
 
 services:
   go:
