--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -1,6 +1,6 @@
 name: barebones
 base: ubuntu@24.04                                        # as an alternative, a ubuntu base can be used
-version: "0.18"                                           # just for humans. Semantic versioning is recommended
+version: "0.19"                                           # just for humans. Semantic versioning is recommended
 summary: Barebones NodeJS rock                            # 79 char long summary
 description: |
     Barebones NodeJS rock
@@ -14,7 +14,7 @@ services:
     command: npm start
     startup: enabled
     # on-success: start
-    on-failure: shutdown
+    on-failure: ignore
     working-dir: /app/src
 
 parts:
@@ -34,12 +34,13 @@ parts:
       rm -rf node_modules
       rm -rf charm
       cd src
+      rm -rf node_modules
       npm install
       cd ..
       mkdir -p ${CRAFT_PART_INSTALL}/app
       cp -ar * ${CRAFT_PART_INSTALL}/app
   
-  install-dependencies:
+  dependencies:
     plugin: npm
     npm-include-node: true
     npm-node-version: "22"
