--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build:server": "bun run build:server:middleware",
     "build:server:middleware": "vite build --ssr src/ssr/server.ts --outDir dist/server",
     "build:server:cli": "vite build --ssr src/ssr/renderer.tsx --outDir dist/server",
+    "watch:server": "chokidar 'src/**/*' -c 'bun run build:server' --initial",
+    "watch:client": "chokidar 'src/**/*' -c 'bun run build:client' --initial",
     "serve": "bun run serve:middleware",
     "serve:middleware": "bun run build:client && bun run build:server:middleware && node dist/server/server.js",
     "serve:cli": "bun run build:client && bun run build:server:cli && bun run serve-express dist/server/renderer.js",
@@ -22,27 +24,30 @@
     "check:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "@canonical/react-ds-core": "^0.9.0",
-    "@canonical/react-ssr": "^0.9.0",
-    "@canonical/styles": "^0.9.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "@canonical/react-ds-core": "0.9.0",
+    "@canonical/react-ssr": "0.9.0",
+    "@canonical/styles": "0.9.0",
+    "express": "5.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@canonical/biome-config": "^0.9.0",
-    "@canonical/typescript-config-react": "^0.9.0",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.0.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.5.2",
-    "globals": "^16.2.0",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.2.3"
+    "@biomejs/biome": "1.9.4",
+    "@canonical/biome-config": "0.9.0",
+    "@canonical/typescript-config-react": "0.9.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@types/express": "5.0.3",
+    "@types/node": "24.0.0",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "@vitejs/plugin-react": "4.5.2",
+    "chokidar-cli": "3.0.0",
+    "globals": "16.2.0",
+    "nodemon": "3.1.10",
+    "typescript": "5.8.3",
+    "vite": "6.3.5",
+    "vite-tsconfig-paths": "5.1.4",
+    "vitest": "3.2.3"
   }
 }
