--- a/charm/charmcraft.yaml
+++ b/charm/charmcraft.yaml
@@ -16,14 +16,32 @@ platforms:
   # s390x:
 
 # (Required)
-summary: A very short one-line summary of the ExpressJS application.
+summary: An ExpressJS 12-Factor boilerplate application 
 
 # (Required)
 description: |
-  A comprehensive overview of your ExpressJS application.
+  This is the 12-Factor App charm of the Web team's ExpressJS boilerplate application.
 
 extensions:
   - expressjs-framework
+
+config:
+  options:
+    HOST:
+      type: string
+      default: "0.0.0.0"
+      description: The host the application will listen on.
+    ENV:
+      type: string
+      default: production
+      description: The environment the app is running in. One of development, production
+    CUSTOM_BASE_URL:
+      type: string
+      default: "http://localhost:3000"
+      description: Base URL of the application
+    MYENVVARIABLE:
+      type: string
+      description: A custom environment variable for the app
 
 # Uncomment the integrations used by your application
 # Integrations set to "optional: false" will block the charm
