--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -3,7 +3,7 @@ name: charmed-nodejs-boilerplate
 # for more information about bases and using 'bare' bases for chiselled rocks
 base: bare # as an alternative, a ubuntu base can be used
 build-base: ubuntu@24.04 # build-base is required when the base is bare
-version: '0.1' # just for humans. Semantic versioning is recommended
+version: '0.0.3' # just for humans. Semantic versioning is recommended
 summary: A summary of your ExpresssJS application # 79 char long summary
 description: |
     This is charmed-nodejs-boilerplate's description. You have a paragraph or two to tell the
@@ -24,11 +24,20 @@ platforms:
 extensions:
     - expressjs-framework
 
-# uncomment the sections you need and adjust according to your requirements.
-# parts:  # you need to uncomment this line to add or update any part.
-#  expressjs-framework/install-app:
-#    # to specify the version of node to be installed, uncomment the following
-#    # line and set the version to the desired one.
-#    # see https://documentation.ubuntu.com/rockcraft/en/latest/common/craft-parts/reference/plugins/npm_plugin/
-#    npm-include-node: true
-#    npm-node-version: node
+parts:
+  expressjs-framework/install-app:
+    plugin: npm
+    source: .
+    npm-include-node: true
+    npm-node-version: "22"
+    override-build: |
+      echo "Running npm install..."
+      npm install
+      echo "Copying app files..."
+      mkdir -p ${CRAFT_PART_INSTALL}/app
+      cp -ar * ${CRAFT_PART_INSTALL}/app
+    overlay-packages:
+      - ca-certificates
+      - coreutils
+      - bash
+      - htop
