--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "build:server:cli": "vite build --ssr src/ssr/renderer.tsx --outDir dist/server",
     "watch:server": "chokidar 'src/**/*' -c 'bun run build:server' --initial",
     "watch:client": "chokidar 'src/**/*' -c 'bun run build:client' --initial",
+    "start": "node dist/server/server.js",
     "serve": "bun run serve:middleware",
     "serve:middleware": "bun run build:client && bun run build:server:middleware && node dist/server/server.js",
     "serve:cli": "bun run build:client && bun run build:server:cli && bun run serve-express dist/server/renderer.js",
@@ -27,6 +28,7 @@
     "@canonical/react-ds-core": "0.9.0",
     "@canonical/react-ssr": "0.9.0",
     "@canonical/styles": "0.9.0",
+    "bun": "^1.2.18",
     "express": "5.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
