--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -24,3 +24,34 @@ platforms:
 extensions:
     - expressjs-framework
 
+parts:
+    app:
+      plugin: nil
+      source: .
+      source-type: local
+      build-snaps:
+        - node/22/stable
+      override-build: |
+        echo "Installing unzip & curl"
+        apt-get update
+        apt-get install -y unzip curl
+        echo "Installing Bun manually"
+        curl -fsSL https://bun.sh/install | bash
+        export PATH="$HOME/.bun/bin:$PATH"
+        which bun
+        bun --version
+        which node
+        node --version
+        echo "========================"
+        echo "Changing into app directory"
+        (
+          cd app
+          echo "========================"
+          rm -rf node_modules
+          rm -rf charm
+          echo "========================"
+          bun install
+          bun run build:client
+          bun run build:server
+        )
+        echo "========================"
