--- a/charm/charmcraft.yaml
+++ b/charm/charmcraft.yaml
@@ -37,7 +37,7 @@ config:
       description: The environment the app is running in. One of development, production
     CUSTOM_BASE_URL:
       type: string
-      default: "http://localhost:3000"
+      default: ""
       description: Base URL of the application
     MYENVVARIABLE:
       type: string
