--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "dependencyDashboard": true,
   "extends": [
-    "config:recommended"
-  ]
+    "github>canonical/renovate-apps"
+  ],
+  "labels": [
+    "bot",
+    "dependencies",
+    "Review: QA needed"
+  ],
+  "reviewersFromCodeOwners": true
 }
