--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -32,26 +32,21 @@ parts:
       build-snaps:
         - node/22/stable
       override-build: |
-        echo "Installing unzip & curl"
-        apt-get update
-        apt-get install -y unzip curl
-        echo "Installing Bun manually"
-        curl -fsSL https://bun.sh/install | bash
-        export PATH="$HOME/.bun/bin:$PATH"
-        which bun
-        bun --version
-        which node
-        node --version
+        npm install -g bun
         echo "========================"
         echo "Changing into app directory"
+        echo "========================"
         (
           cd app
-          echo "========================"
+          echo "Removing old dependencies"
           rm -rf node_modules
           rm -rf charm
           echo "========================"
+
+          echo "Installing dependencies"
           bun install
-          bun run build:client
-          bun run build:server
+          bun run build
         )
+        echo "========================"
+        echo "Build finished"
         echo "========================"
