--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -1,53 +1,52 @@
-name: barebones
-base: ubuntu@24.04                                        # as an alternative, a ubuntu base can be used
-version: "0.0.3"                                          # just for humans. Semantic versioning is recommended
-summary: Barebones NodeJS rock                            # 79 char long summary
+name: charmed-nodejs-boilerplate
+# see https://documentation.ubuntu.com/rockcraft/en/latest/explanation/bases/
+# for more information about bases and using 'bare' bases for chiselled rocks
+base: bare # as an alternative, a ubuntu base can be used
+build-base: ubuntu@24.04 # build-base is required when the base is bare
+version: '0.0.3' # just for humans. Semantic versioning is recommended
+summary: A summary of your ExpresssJS application # 79 char long summary
 description: |
-    Barebones NodeJS rock
-
+    This is charmed-nodejs-boilerplate's description. You have a paragraph or two to tell the
+    most important story about it. Keep it under 100 words though,
+    we live in tweetspace and your description wants to look good in the
+    container registries out there.
+# the platforms this rock should be built on and run on.
+# you can check your architecture with `dpkg --print-architecture`
 platforms:
-  amd64:
+    amd64:
+    arm64:
+    # ppc64el:
+    # s390x:
 
-services:
-  go:
-    override: replace
-    command: npm start
-    startup: enabled
-    # on-success: start
-    on-failure: ignore
-    working-dir: /app/src
+# to ensure the expressjs-framework extension works properly, your ExpressJS
+# application should be inside the app directory and the "start" script defined
+# in the package.json's scripts section.
+extensions:
+    - expressjs-framework
 
 parts:
-  app:
-    plugin: nil
-    source: .
-    source-type: local
-    build-snaps:
-      - node/22/stable
-    override-build: |
-      echo "We are here"
-      ls -lh
-      pwd
-      echo "We are here2"
-      echo ${CRAFT_PART_INSTALL}
-      echo "The value of CRAFT_PART_INSTALL is: ${CRAFT_PART_INSTALL}"
-      rm -rf node_modules
-      rm -rf charm
-      cd src
-      rm -rf node_modules
-      npm install
-      cd ..
-      mkdir -p ${CRAFT_PART_INSTALL}/app
-      cp -ar * ${CRAFT_PART_INSTALL}/app
-  
-  dependencies:
-    plugin: npm
-    npm-include-node: true
-    npm-node-version: "22"
-    source: ./src
-    source-type: local
-    overlay-packages:
-        - ca-certificates
-        - coreutils
-        - bash
-        - htop
+    app:
+      plugin: nil
+      source: .
+      source-type: local
+      build-snaps:
+        - node/22/stable
+      override-build: |
+        npm install -g bun
+        echo "========================"
+        echo "Changing into app directory"
+        echo "========================"
+        (
+          cd app
+          echo "Removing old dependencies"
+          rm -rf node_modules
+          rm -rf charm
+          echo "========================"
+
+          echo "Installing dependencies"
+          bun install
+          bun run build
+        )
+        echo "========================"
+        echo "Build finished"
+        echo "========================"
