--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -3,7 +3,7 @@ name: charmed-nodejs-boilerplate
 # for more information about bases and using 'bare' bases for chiselled rocks
 base: bare # as an alternative, a ubuntu base can be used
 build-base: ubuntu@24.04 # build-base is required when the base is bare
-version: '0.0.3' # just for humans. Semantic versioning is recommended
+version: "0.0.3" # just for humans. Semantic versioning is recommended
 summary: A summary of your ExpresssJS application # 79 char long summary
 description: |
     This is charmed-nodejs-boilerplate's description. You have a paragraph or two to tell the
