--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -25,28 +25,21 @@ extensions:
     - expressjs-framework
 
 parts:
-    app:
-      plugin: nil
-      source: .
-      source-type: local
+    expressjs-framework/install-app:
       build-snaps:
-        - node/22/stable
+        - bun-js
       override-build: |
-        npm install -g bun
-        echo "========================"
-        echo "Changing into app directory"
-        echo "========================"
-        (
-          cd app
-          echo "Removing old dependencies"
-          rm -rf node_modules
-          rm -rf charm
-          echo "========================"
+        rm -rf node_modules
+        # We need the dev dependencies to build the app
+        npm install --include=dev
+        bun run build
 
-          echo "Installing dependencies"
-          bun install
-          bun run build
-        )
-        echo "========================"
-        echo "Build finished"
-        echo "========================"
+        craftctl default
+
+        # We need to copy the built files to the install directory
+        cp -r dist/ ${CRAFT_PART_INSTALL}/lib/node_modules/react-express-poc/dist
+        npm config set script-shell=bash --location project
+        cp ${CRAFT_PART_BUILD}/.npmrc ${CRAFT_PART_INSTALL}/lib/node_modules/react-express-poc/.npmrc
+        chown -R 584792:584792 ${CRAFT_PART_INSTALL}/lib/node_modules/react-express-poc
+        ln -s /lib/node_modules/react-express-poc ${CRAFT_PART_INSTALL}/app
+        chown -R 584792:584792 ${CRAFT_PART_INSTALL}/app
