--- a/rockcraft.yaml
+++ b/rockcraft.yaml
@@ -3,13 +3,13 @@ name: charmed-nodejs-boilerplate
 # for more information about bases and using 'bare' bases for chiselled rocks
 base: bare # as an alternative, a ubuntu base can be used
 build-base: ubuntu@24.04 # build-base is required when the base is bare
-version: "0.0.3" # just for humans. Semantic versioning is recommended
-summary: A summary of your ExpresssJS application # 79 char long summary
+version: "0.0.4"
+summary: Nodejs Boilerplate application
+
 description: |
-    This is charmed-nodejs-boilerplate's description. You have a paragraph or two to tell the
-    most important story about it. Keep it under 100 words though,
-    we live in tweetspace and your description wants to look good in the
-    container registries out there.
+    A modern Node.js boilerplate application featuring React frontend with Vite,
+    Express.js backend with server-side rendering (SSR), and Juju charm integration.
+
 # the platforms this rock should be built on and run on.
 # you can check your architecture with `dpkg --print-architecture`
 platforms:
@@ -25,28 +25,22 @@ extensions:
     - expressjs-framework
 
 parts:
-    app:
-      plugin: nil
-      source: .
-      source-type: local
+    expressjs-framework/install-app:
       build-snaps:
-        - node/22/stable
+        - bun-js
       override-build: |
-        npm install -g bun
-        echo "========================"
-        echo "Changing into app directory"
-        echo "========================"
-        (
-          cd app
-          echo "Removing old dependencies"
-          rm -rf node_modules
-          rm -rf charm
-          echo "========================"
+        rm -rf node_modules
+        # We need the dev dependencies to build the app
+        npm install --include=dev
+        bun run build
 
-          echo "Installing dependencies"
-          bun install
-          bun run build
-        )
-        echo "========================"
-        echo "Build finished"
-        echo "========================"
+        craftctl default
+
+        # We need to copy the built files to the install directory
+        mkdir -p ${CRAFT_PART_INSTALL}/lib/node_modules/react-express-poc/dist
+        cp -r dist/. ${CRAFT_PART_INSTALL}/lib/node_modules/react-express-poc/dist
+        npm config set script-shell=bash --location project
+        cp ${CRAFT_PART_BUILD}/.npmrc ${CRAFT_PART_INSTALL}/lib/node_modules/react-express-poc/.npmrc
+        chown -R 584792:584792 ${CRAFT_PART_INSTALL}/lib/node_modules/react-express-poc
+        ln -s /lib/node_modules/react-express-poc ${CRAFT_PART_INSTALL}/app
+        chown -R 584792:584792 ${CRAFT_PART_INSTALL}/app
