--- a/charm/charmcraft.yaml
+++ b/charm/charmcraft.yaml
@@ -25,6 +25,16 @@ description: |
 extensions:
   - expressjs-framework
 
+charm-libs:
+  - lib: tempo_coordinator_k8s.tracing
+    version: "0"
+  - lib: smtp_integrator.smtp
+    version: "0"
+  - lib: openfga_k8s.openfga
+    version: "1"
+  - lib: hydra.oauth
+    version: "0"
+
 config:
   options:
     HOST:
